# medstudy-cwxo50

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  (+1 more)
src/backend/: .env.example  .flake8  Dockerfile  README.md  celery.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py  schemas.py  urls.py  views.py
src/backend/api/v1/tests/: __init__.py  test_views.py
src/backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
src/backend/core/: __init__.py  authentication.py  exceptions.py  middleware.py  pagination.py  permissions.py  utils.py  validators.py
src/backend/core/tests/: __init__.py  test_authentication.py  test_middleware.py  test_permissions.py
src/backend/docs/: README.md  api.md  architecture.md  deployment.md  development.md  openapi.yaml
src/backend/scripts/: entrypoint.sh  generate-openapi.sh  run-tests.sh  start-celery.sh  wait-for-it.sh
src/backend/services/: __init__.py
src/backend/services/analysis/: __init__.py  models.py  schemas.py  serializers.py  views.py
src/backend/services/analysis/migrations/: __init__.py
src/backend/services/analysis/tests/: __init__.py  test_models.py  test_views.py
src/backend/services/community/: __init__.py  models.py  schemas.py  serializers.py  views.py
src/backend/services/community/migrations/: __init__.py
src/backend/services/community/tests/: __init__.py  test_models.py  test_views.py
src/backend/services/data/: __init__.py  models.py  schemas.py  serializers.py  views.py
src/backend/services/data/migrations/: __init__.py
src/backend/services/data/tests/: __init__.py  test_models.py  test_views.py
src/backend/services/protocol/: __init__.py  models.py  schemas.py  serializers.py  views.py
src/backend/services/protocol/migrations/: __init__.py
src/backend/services/protocol/tests/: __init__.py  test_models.py  test_views.py
src/backend/services/user/: __init__.py  models.py  schemas.py  serializers.py  views.py
src/backend/services/user/migrations/: __init__.py
src/backend/services/user/tests/: __init__.py  test_models.py  test_views.py
src/backend/tasks/: __init__.py  analysis.py  data_processing.py  notifications.py
src/backend/tasks/tests/: __init__.py  test_analysis.py  test_data_processing.py  test_notifications.py
(+163 files in other folders)
