[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medical-research-platform"
version = "0.1.0"
description = "Backend services for the Medical Research Platform enabling community-driven medical research"
authors = ["Medical Research Platform Team"]
license = "MIT"
python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-ninja = "^0.22"
celery = "^5.3"
redis = "^7.0"
psycopg2-binary = "^2.9"
pydantic = "^2.0"
numpy = "^1.24"
pandas = "^2.0"
scipy = "^1.11"
boto3 = "^1.28"
pyjwt = "^2.7"
cryptography = "^41.0"
gunicorn = "^21.0"
uvicorn = "^0.23"
sentry-sdk = "^1.29"
prometheus-client = "^0.17"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
pytest-cov = "^4.1"
pytest-xdist = "^3.3"
black = "^23.7"
isort = "^5.12"
mypy = "^1.5"
flake8 = "^6.1"
django-stubs = "^4.2"
django-debug-toolbar = "^4.1"
factory-boy = "^3.3"
faker = "^19.3"
safety = "^2.3"
bandit = "^1.7"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"
extend-exclude = "/migrations/"
force-exclude = "tests/fixtures/"
preview = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true
plugins = [
    "mypy_django_plugin.main",
    "numpy.typing.mypy_plugin"
]
exclude = [
    "migrations",
    "tests/fixtures"
]

[tool.pytest.ini_options]
testpaths = [
    "api/v1/tests",
    "core/tests",
    "services/*/tests",
    "tasks/tests"
]
addopts = [
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--no-cov-on-fail",
    "--verbosity=2",
    "--durations=10",
    "--failed-first"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.django-stubs]
django_settings_module = "config.settings"